--- a/index.html
+++ b/index.html
@@ -65,51 +65,53 @@
         <div class="container">
           <h2 class="visually-hidden">Chapter</h2>
           <ul class="chapter-list">
-              <li class="chapter-item">
-                <div class="chapter-icon">
+            <li class="chapter-item">
+              <div class="chapter-icon">
                 <svg class="icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-                <h3 class="chapter-tittle">Strategy</h3>
-                <p class="chapter-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="chapter-item">
-                <div class="chapter-icon">
+              <h3 class="chapter-tittle">Strategy</h3>
+              <p class="chapter-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="chapter-item">
+              <div class="chapter-icon">
                 <svg class="icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
-                </div>
-                <h3 class="chapter-tittle">Punctuality</h3>
-                <p class="chapter-text">
-                  Bring the key message to the brand's audience for the best price
-                  within the shortest possible time.
-                </p>
-              </li>
-              <li class="chapter-item">
-                <div class="chapter-icon">
-                <svg class="icons" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>    
                 </svg>
               </div>
-                <h3 class="chapter-tittle">Diligence</h3>
-                <p class="chapter-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="chapter-item">
-                <div class="chapter-icon">
+              <h3 class="chapter-tittle">Punctuality</h3>
+              <p class="chapter-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="chapter-item">
+              <div class="chapter-icon">
+                <svg class="icons" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="chapter-tittle">Diligence</h3>
+              <p class="chapter-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="chapter-item">
+              <div class="chapter-icon">
                 <svg class="icons" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
-                </div>
-                <h3 class="chapter-tittle">Technologies</h3>
-                <p class="chapter-text">
-                  Design practice focused on digital experiences. We bring forth a
-                  deep passion for problem-solving.
-                </p>
+                </svg>
+              </div>
+              <h3 class="chapter-tittle">Technologies</h3>
+              <p class="chapter-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
@@ -158,7 +160,9 @@
                     </a>
                   </li>
                 </ul>
+              </div>
             </li>
+
             <li class="ourteam-item">
               <img
                 src="./images/tomford.jpg"
@@ -183,8 +187,8 @@
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
-                  </li class="soc-item">
-                  <li>
+                  </li>
+                  <li class="soc-item">
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
@@ -265,7 +269,8 @@
                     <a class="soc-link" href="">
                       <svg class="icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
-                      </a>
+                      </svg>
+                    </a>
                   </li>
                   <li class="soc-item">
                     <a class="soc-link" href="">
@@ -299,9 +304,12 @@
                   height="300"
                   alt="Banking App"
                 />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="porfolio-text">App</p>
@@ -315,7 +323,11 @@
                   height="300"
                   alt="Cashless Payment"
                 />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Cashless Payment</h3>
@@ -330,7 +342,11 @@
                   height="300"
                   alt="Meditation App"
                 />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Meditation App</h3>
@@ -345,7 +361,11 @@
                   height="300"
                   alt="Taxi Service"
                 />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Taxi Service</h3>
@@ -360,7 +380,11 @@
                   width="360"
                   height="300"
                 />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -375,7 +399,11 @@
                   width="360"
                   height="300"
                 />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-about">
                 <h3 class="portfolio-name">Online Courses</h3>
@@ -391,12 +419,12 @@
       <div class="container footer-container">
         <div class="foter-webstudio">
           <a class="logo logo-footer" href="./index.html"
-          >web<span class="logo-footer-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+            >web<span class="logo-footer-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
         <div class="soc-footer">
           <p class="soc-media">Social media</p>
@@ -412,29 +440,26 @@
               <a class="soc-footer-link" href="">
                 <svg class="icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
-                </a>
-              </li>
-              <li class="soc-footer-item">
-                <a class="soc-footer-link" href="">
-                  <svg class="icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="soc-footer-item">
-                <a class="soc-footer-link" href="">
-                  <svg class="icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-footer-item">
+              <a class="soc-footer-link" href="">
+                <svg class="icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-footer-item">
+              <a class="soc-footer-link" href="">
+                <svg class="icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </footer>
-
-
-
-
   </body>
 </html>
